# cmake

cmake_capture_commandline_wrapper/: cmake
cmake_libs/: CMakeLists.txt  README
cmake_libs/cmake/: cpp_standard.cmake
cmake_libs/src/: CMakeLists.txt  main.cpp
cmake_libs/src/getter/: CMakeLists.txt  getter.cpp
cmake_libs/src/getter/include/: getter.h
cmake_libs/src/getter1/: CMakeLists.txt  getter1.cpp
cmake_libs/src/getter1/include/: getter1.h
cmake_load_projects/: CMakeLists.txt
cmake_load_projects/cmake/: CMakeLists.txt  short_alloc.cmake
ex1/: clean-all.cmake
ex2_gtest_gmock/: CMakeLists.txt  README.adoc  main.cpp  mytest.cpp  setup_google_test.sh
ex3_gtest_gmock/: CMakeLists.txt  README.adoc  tester.cpp
ex3_gtest_gmock/cmake/: add_dl_project.CMakeLists.cmake.in  add_dl_project.cmake
ex4_rpath_and_deb/: CMakeLists.txt  README.adoc  config.h.in  tutorial.cpp
ex4_rpath_and_deb/cmake/: package_deb.cmake  set_rel.cmake
ex4_rpath_and_deb/mysqrt/: CMakeLists.txt  mysqrt.cpp  mysqrt.h
ex4_rpath_and_deb/test/: CMakeLists.txt  main.cpp
home/: toolchain_desktop.cmake
